--- a/lesson_04/src/components/CRUD/style.sass
+++ b/lesson_04/src/components/CRUD/style.sass
@@ -4,3 +4,14 @@
             color: crimson
             font-weight: bold
             text-decoration: underline
+
+.form
+    display: flex
+    flex-direction: column
+    width: fit-content
+    border: 1px dashed black
+    padding: 10px
+    margin-bottom: 10px
+
+    label
+        margin-bottom: 10px
