--- a/lesson_09/src/components/TodosSort/TodosSort.module.sass
+++ b/lesson_09/src/components/TodosSort/TodosSort.module.sass
@@ -1,10 +1,10 @@
-.filter
+.sort
     display: flex
     flex-direction: column
-    padding: 10px
-    border: 1px solid black
-    margin: 10px 0
     width: fit-content
+    padding: 10px
+    margin: 10px 0
+    border: 1px solid black
 
     select
         margin-bottom: 10px
